# boxlite

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  target
.github/workflows/: README.md  _deploy-single-service.yml  api-client-drift.yml  build-c.yml  build-runner-binary.yml  deploy-api.yml  deploy-app-services.yml  deploy-runner.yml  e2e-cloud-test.yml  e2e-cloud.yml  e2e-stack.yml  e2e-test.yml
apps/: NOTICE  go.work  go.work.sum  nx.json  package.json  tsconfig.base.json
apps/api/: Dockerfile  Dockerfile.source  eslint.config.mjs  project.json  webpack.config.js
apps/api-client-go/: model_box.go  model_job_type.go  model_workspace.go  project.json
apps/api-client-go/api/: openapi.yaml
apps/api/src/: app.module.ts  openapi-webhooks.ts  tracing.ts
apps/cli/: main.go
apps/cli/docs/: boxlite.md  boxlite_archive.md  boxlite_autocomplete.md  boxlite_create.md  boxlite_delete.md  boxlite_docs.md  boxlite_exec.md  boxlite_info.md  boxlite_list.md  boxlite_login.md  boxlite_logout.md  boxlite_mcp.md  boxlite_mcp_config.md  boxlite_mcp_init.md  boxlite_mcp_start.md  boxlite_organization.md  boxlite_organization_create.md  boxlite_organization_delete.md  boxlite_organization_list.md  boxlite_organization_use.md  boxlite_preview-url.md  boxlite_snapshot.md  boxlite_snapshot_create.md  boxlite_snapshot_delete.md  boxlite_snapshot_list.md  boxlite_snapshot_push.md  boxlite_ssh.md  boxlite_start.md  boxlite_stop.md  boxlite_version.md  boxlite_volume.md  boxlite_volume_create.md  boxlite_volume_delete.md  boxlite_volume_get.md  boxlite_volume_list.md
apps/cli/hack/: generate-cli-docs.sh
apps/cli/internal/: cmd.go
apps/daemon/: go.mod  go.sum  project.json
apps/dashboard/: project.json  tsconfig.app.json  vite.config.mts
apps/dashboard/.storybook/: main.ts
apps/dashboard/src/: App.tsx
apps/dex/: config.yaml  entrypoint.sh  render_test.sh
apps/infra/: sst.config.ts
apps/infra-local/: CONNECTIONS.md  README.md
apps/infra-local/boxlite_local/: services.py
apps/infra-local/compose/: services.py
apps/infra-local/configs/: api.env
apps/otel-collector/: Dockerfile  builder-config.yaml  project.json
apps/otel-collector/exporter/: config.go  (+2 more)
apps/proxy/: Dockerfile  project.json
apps/runner/: project.json
apps/scripts/: local-dex-env.mjs  local-dex-env.test.mjs
apps/ssh-gateway/: Dockerfile  main.go  project.json  runner_hostkey_test.go
bench/baselines/: density-parallel-10.json  latency-clone-batch-10.json  latency-clone.json  latency-cold-start-jailed.json  latency-cold-start.json  latency-get-or-create-dedup.json  latency-image-pull-cached.json  latency-inspect-list.json  latency-runtime-shutdown.json  latency-snapshot.json  latency-warm-start.json  resource-cpu-load.json  resource-density-10-idle.json  resource-idle.json  resource-mem-pressure.json  resource-multi-vcpu-load.json  resource-runtime-metrics-poll.json  stability-churn.json  stability-exec-loop.json  stability-exec-parallel.json  stability-restart-loop.json  stability-snapshot-loop.json  stability-soak-load.json  stability-soak.json  throughput-copy-into.json  throughput-copy-out.json  throughput-disk-fio-read.json  throughput-disk-fio.json  throughput-disk-read.json  throughput-disk-write.json  throughput-dns-latency.json  throughput-export.json  throughput-image-pull.json  throughput-import.json  throughput-many-ports-setup.json  throughput-net-iperf3-egress.json  throughput-net-iperf3-parallel.json  throughput-net-iperf3.json  throughput-net-tcp-sink.json  throughput-net-udp.json  (+4 more)
bench/results/: density-parallel-create.json  latency-cold-start.json  latency-exec.json  latency-lifecycle.json  stability-churn.json  stability-exec-loop.json  throughput-exec-parallel.json  throughput-exec-serial.json
docs/: faq.md
docs/architecture/: README.md
docs/reference/: README.md
docs/testing/: rest-api-e2e.md
make/: build.mk  changes.mk  dev.mk  help.mk  quality.mk  test.mk
openapi/: box.openapi.yaml
scripts/ci/: setup-e2e-cloud-oidc.sh
scripts/deploy/: runner-update-binary.sh
scripts/test/: reap_boxes.sh
sdks/c/: README.md  cbindgen.toml
sdks/c/tests/: CMakeLists.txt
sdks/c/tests/e2e/: e2e_basic.c  test_c_entry.py
sdks/go/: abandon_async_test.go  advanced_options.go  advanced_options_integration_test.go  attach_integration_test.go  boxlite_test.go  bridge.c  bridge.h  clone_export.go  copy.go  exec.go  exec_backpressure_integration_test.go  exec_integration_test.go  exec_stream_delivery_integration_test.go  options.go  rest_test.go  security.go  security_readonly_volume_remount_integration_test.go  security_symlink_escape_integration_test.go  snapshot.go  unread_stream_integration_test.go
src/boxlite/: Cargo.toml  build.rs
src/cli/: Cargo.toml  README.md
src/landlock/: Cargo.toml
src/landlock/src/: lib.rs
(+903 files in other folders)
