[package]
name = "boxlite-landlock"
version = "0.9.5"
edition = "2021"
license = "Apache-2.0"
description = "Landlock rule building + enforcement, shared by boxlite and the LD_PRELOAD seal library"

# Two artifacts from one source:
#  - rlib: linked into boxlite for rule building/serialization (host side).
#  - cdylib (libboxlite_landlock.so): LD_PRELOAD'd into the shim by bwrap via
#    `--setenv`. Its `.init_array` constructor applies Landlock in the shim's
#    process AFTER bwrap's mounts and BEFORE the shim's main() — no exec wrapper,
#    no shim source change. A filesystem Landlock domain denies all mount
#    syscalls, so it cannot be applied before bwrap; the loader hook is the only
#    point that runs in the shim's process after bwrap has finished mounting.
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
libc = "0.2"
